--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       </header>
 
       <!--NAVBAR-->
-      <div class="row bg_lighter_dark">
+      <div class="row bg_lighter_dark ">
         <div class="mx-auto pos-f-t">
           <div class="collapse" id="navbarToggleExternalContent">
             <div class="bg_krass_dark p-4">
@@ -44,14 +44,16 @@
             
         <div class=" col-xl-3 col-lg-4 col-md-6 movie_box_wrapper">
            <div class="bg_krass_dark d-flex flex-row movie_box">
-            <img class="image_placeholder" src="img/equilibrium.jpg" alt=""> 
-            <div class=" d-flex flex-column text-box">
-              <h3 class="title_placeholder text-white text-white"></h3>
+            <img class="image_placeholder" src="" alt=""> 
+            <div class=" d-flex flex-column text_box">
+              <h3 class="title_placeholder text-white"></h3>
               <p class="description_placeholder text-white"></p>
                 <div class="d-flex align-items-center flex-nowrap ml-auto mt-auto movie_link btn btn-outline-light">
                 <h4 class=" text-success like_text like_pad">Like</h4>
                 <h4><i class=" fas fa-thumbs-up text-success like_pad like_icon"></i></h4>
-                <span class="btn-success circle"></span>
+                <div class="d-flex flex-column align-items-center bg-success like_circle">
+                  <h3 class="text-center circle"></h3>
+                </div>
                 </div>
             </div>  
           </div> 
@@ -59,14 +61,16 @@
 
         <div class=" col-xl-3 col-lg-4 col-md-6 movie_box_wrapper">
            <div class="bg_krass_dark d-flex flex-row movie_box">
-            <img class="image_placeholder" src="img/equilibrium.jpg" alt=""> 
-            <div class=" d-flex flex-column text-box">
-              <h3 class="title_placeholder text-white text-white"></h3>
+            <img class="image_placeholder" src="" alt=""> 
+            <div class=" d-flex flex-column text_box">
+              <h3 class="title_placeholder text-white"></h3>
               <p class="description_placeholder text-white"></p>
                 <div class="d-flex align-items-center flex-nowrap ml-auto mt-auto movie_link btn btn-outline-light">
                 <h4 class=" text-success like_text like_pad">Like</h4>
                 <h4><i class=" fas fa-thumbs-up text-success like_pad like_icon"></i></h4>
-                <span class="btn-success circle"></span>
+                <div class="d-flex flex-column align-items-center bg-success like_circle">
+                  <h3 class="text-center circle"></h3>
+                </div>
                 </div>
             </div>  
           </div> 
@@ -74,14 +78,16 @@
 
         <div class=" col-xl-3 col-lg-4 col-md-6 movie_box_wrapper">
            <div class="bg_krass_dark d-flex flex-row movie_box">
-            <img class="image_placeholder" src="img/equilibrium.jpg" alt=""> 
-            <div class=" d-flex flex-column text-box">
-              <h3 class="title_placeholder text-white text-white"></h3>
+            <img class="image_placeholder" src="" alt=""> 
+            <div class=" d-flex flex-column text_box">
+              <h3 class="title_placeholder text-white"></h3>
               <p class="description_placeholder text-white"></p>
                 <div class="d-flex align-items-center flex-nowrap ml-auto mt-auto movie_link btn btn-outline-light">
                 <h4 class=" text-success like_text like_pad">Like</h4>
                 <h4><i class=" fas fa-thumbs-up text-success like_pad like_icon"></i></h4>
-                <span class="btn-success circle"></span>
+                <div class="d-flex flex-column align-items-center bg-success like_circle">
+                  <h3 class="text-center circle"></h3>
+                </div>
                 </div>
             </div>  
           </div> 
@@ -89,14 +95,16 @@
 
         <div class=" col-xl-3 col-lg-4 col-md-6 movie_box_wrapper">
            <div class="bg_krass_dark d-flex flex-row movie_box">
-            <img class="image_placeholder" src="img/equilibrium.jpg" alt=""> 
-            <div class=" d-flex flex-column text-box">
-              <h3 class="title_placeholder text-white text-white"></h3>
+            <img class="image_placeholder" src="" alt=""> 
+            <div class=" d-flex flex-column text_box">
+              <h3 class="title_placeholder text-white"></h3>
               <p class="description_placeholder text-white"></p>
                 <div class="d-flex align-items-center flex-nowrap ml-auto mt-auto movie_link btn btn-outline-light">
                 <h4 class=" text-success like_text like_pad">Like</h4>
                 <h4><i class=" fas fa-thumbs-up text-success like_pad like_icon"></i></h4>
-                <span class="btn-success circle"></span>
+                <div class="d-flex flex-column align-items-center bg-success like_circle">
+                  <h3 class="text-center circle"></h3>
+                </div>
                 </div>
             </div>  
           </div> 
@@ -104,14 +112,16 @@
 
         <div class=" col-xl-3 col-lg-4 col-md-6 movie_box_wrapper">
            <div class="bg_krass_dark d-flex flex-row movie_box">
-            <img class="image_placeholder" src="img/equilibrium.jpg" alt=""> 
-            <div class=" d-flex flex-column text-box">
-              <h3 class="title_placeholder text-white text-white"></h3>
+            <img class="image_placeholder" src="" alt=""> 
+            <div class=" d-flex flex-column text_box">
+              <h3 class="title_placeholder text-white"></h3>
               <p class="description_placeholder text-white"></p>
                 <div class="d-flex align-items-center flex-nowrap ml-auto mt-auto movie_link btn btn-outline-light">
                 <h4 class=" text-success like_text like_pad">Like</h4>
                 <h4><i class=" fas fa-thumbs-up text-success like_pad like_icon"></i></h4>
-                <span class="btn-success circle"></span>
+                <div class="d-flex flex-column align-items-center bg-success like_circle">
+                  <h3 class="text-center circle"></h3>
+                </div>
                 </div>
             </div>  
           </div> 
@@ -119,14 +129,16 @@
 
         <div class=" col-xl-3 col-lg-4 col-md-6 movie_box_wrapper">
            <div class="bg_krass_dark d-flex flex-row movie_box">
-            <img class="image_placeholder" src="img/equilibrium.jpg" alt=""> 
-            <div class=" d-flex flex-column text-box">
-              <h3 class="title_placeholder text-white text-white"></h3>
+            <img class="image_placeholder" src="" alt=""> 
+            <div class=" d-flex flex-column text_box">
+              <h3 class="title_placeholder text-white"></h3>
               <p class="description_placeholder text-white"></p>
                 <div class="d-flex align-items-center flex-nowrap ml-auto mt-auto movie_link btn btn-outline-light">
                 <h4 class=" text-success like_text like_pad">Like</h4>
                 <h4><i class=" fas fa-thumbs-up text-success like_pad like_icon"></i></h4>
-                <span class="btn-success circle"></span>
+                <div class="d-flex flex-column align-items-center bg-success like_circle">
+                  <h3 class="text-center circle"></h3>
+                </div>
                 </div>
             </div>  
           </div> 
@@ -134,14 +146,16 @@
 
         <div class=" col-xl-3 col-lg-4 col-md-6 movie_box_wrapper">
            <div class="bg_krass_dark d-flex flex-row movie_box">
-            <img class="image_placeholder" src="img/equilibrium.jpg" alt=""> 
-            <div class=" d-flex flex-column text-box">
-              <h3 class="title_placeholder text-white text-white"></h3>
+            <img class="image_placeholder" src="" alt=""> 
+            <div class=" d-flex flex-column text_box">
+              <h3 class="title_placeholder text-white"></h3>
               <p class="description_placeholder text-white"></p>
                 <div class="d-flex align-items-center flex-nowrap ml-auto mt-auto movie_link btn btn-outline-light">
                 <h4 class=" text-success like_text like_pad">Like</h4>
                 <h4><i class=" fas fa-thumbs-up text-success like_pad like_icon"></i></h4>
-                <span class="btn-success circle"></span>
+                <div class="d-flex flex-column align-items-center bg-success like_circle">
+                  <h3 class="text-center circle"></h3>
+                </div>
                 </div>
             </div>  
           </div> 
@@ -149,14 +163,16 @@
 
         <div class=" col-xl-3 col-lg-4 col-md-6 movie_box_wrapper">
            <div class="bg_krass_dark d-flex flex-row movie_box">
-            <img class="image_placeholder" src="img/equilibrium.jpg" alt=""> 
-            <div class=" d-flex flex-column text-box">
-              <h3 class="title_placeholder text-white text-white"></h3>
+            <img class="image_placeholder" src="" alt=""> 
+            <div class=" d-flex flex-column text_box">
+              <h3 class="title_placeholder text-white"></h3>
               <p class="description_placeholder text-white"></p>
                 <div class="d-flex align-items-center flex-nowrap ml-auto mt-auto movie_link btn btn-outline-light">
                 <h4 class=" text-success like_text like_pad">Like</h4>
                 <h4><i class=" fas fa-thumbs-up text-success like_pad like_icon"></i></h4>
-                <span class="btn-success circle"></span>
+                <div class="d-flex flex-column align-items-center bg-success like_circle">
+                  <h3 class="text-center circle"></h3>
+                </div>
                 </div>
             </div>  
           </div> 
@@ -164,14 +180,16 @@
 
         <div class=" col-xl-3 col-lg-4 col-md-6 movie_box_wrapper">
            <div class="bg_krass_dark d-flex flex-row movie_box">
-            <img class="image_placeholder" src="img/equilibrium.jpg" alt=""> 
-            <div class=" d-flex flex-column text-box">
-              <h3 class="title_placeholder text-white text-white"></h3>
+            <img class="image_placeholder" src="" alt=""> 
+            <div class=" d-flex flex-column text_box">
+              <h3 class="title_placeholder text-white"></h3>
               <p class="description_placeholder text-white"></p>
                 <div class="d-flex align-items-center flex-nowrap ml-auto mt-auto movie_link btn btn-outline-light">
                 <h4 class=" text-success like_text like_pad">Like</h4>
                 <h4><i class=" fas fa-thumbs-up text-success like_pad like_icon"></i></h4>
-                <span class="btn-success circle"></span>
+                <div class="d-flex flex-column align-items-center bg-success like_circle">
+                  <h3 class="text-center circle"></h3>
+                </div>
                 </div>
             </div>  
           </div> 
@@ -179,14 +197,16 @@
 
         <div class=" col-xl-3 col-lg-4 col-md-6 movie_box_wrapper">
            <div class="bg_krass_dark d-flex flex-row movie_box">
-            <img class="image_placeholder" src="img/equilibrium.jpg" alt=""> 
-            <div class=" d-flex flex-column text-box">
-              <h3 class="title_placeholder text-white text-white"></h3>
+            <img class="image_placeholder" src="" alt=""> 
+            <div class=" d-flex flex-column text_box">
+              <h3 class="title_placeholder text-white"></h3>
               <p class="description_placeholder text-white"></p>
                 <div class="d-flex align-items-center flex-nowrap ml-auto mt-auto movie_link btn btn-outline-light">
                 <h4 class=" text-success like_text like_pad">Like</h4>
                 <h4><i class=" fas fa-thumbs-up text-success like_pad like_icon"></i></h4>
-                <span class="btn-success circle"></span>
+                <div class="d-flex flex-column align-items-center bg-success like_circle">
+                  <h3 class="text-center circle"></h3>
+                </div>
                 </div>
             </div>  
           </div> 
